# squeeze-finder

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
data/research/: reddit_strategies.json
deploy/: Caddyfile.snippet  install.sh  squeeze-finder.nginx.conf  squeeze-finder.service  squeeze-warm.service  squeeze-warm.timer  update.sh
docs/: perps-scope.md
scripts/: bot_run.sh  com.squeezefinder.accrual.plist  com.squeezefinder.bot.plist  com.squeezefinder.crypto.plist  com.squeezefinder.scalp.plist  com.squeezefinder.swing.plist  crypto_run.sh  daily_accrual.sh  scalp_run.sh  swing_run.sh
src/: __init__.py  api.py  cli.py  config.py  scanner.py  swing_scanner.py  tracker.py
src/analyst/: openrouter.py
src/bot/: alpaca.py  runner.py  strategy.py
src/crypto/: __init__.py  runner.py  scalp.py  scalp_runner.py  scanner.py  strategy.py  universe.py
src/data/: _cache.py  alphavantage.py  apewisdom.py  bigfish.py  catalysts.py  dilution.py  finnhub.py  finra.py  ftd.py  ftd_downloader.py  fundamentals.py  iborrowdesk.py  insiders.py  inst_holders.py  liquid_universe.py  options.py  prices.py  regime.py  regsho.py  stocktwits.py  trending.py  universe.py  zero_dte.py
src/graph/: build.py  feedback.py  insights.py  model.py
src/options/: greeks.py  recommender.py  zero_dte_scorer.py
src/score/: backtest.py  risk.py  (+8 more)
tests/: test_bot.py  test_finnhub_validity.py  test_graph.py  test_levels.py  test_liquid_universe.py  test_risk.py  test_swing_backtest.py  test_swing_factors.py
web/: package.json  pnpm-lock.yaml
(+46 files in other folders)
