[project]
name = "squeeze-finder"
version = "0.1.0"
description = "Short-squeeze scanner + analyst for US equities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "yfinance>=0.2.50",
    "polars>=1.19",
    "pandas>=2.2",
    "numpy>=2.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "typer>=0.15",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
squeeze = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
